@@ -590,7 +590,56 @@ literal|"c++-cpp-output"
 argument_list|)
 operator|==
 literal|0
+operator|||
+name|strcmp
+argument_list|(
+name|arg
+argument_list|,
+literal|"objective-c++"
+argument_list|)
+operator|==
+literal|0
+operator|||
+name|strcmp
+argument_list|(
+name|arg
+argument_list|,
+literal|"objective-c++-cpp-output"
+argument_list|)
+operator|==
+literal|0
 operator|)
+condition|)
+name|library
+operator|=
+literal|1
+expr_stmt|;
+name|saw_speclang
+operator|=
+literal|1
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|strcmp
+argument_list|(
+name|argv
+index|[
+name|i
+index|]
+argument_list|,
+literal|"-ObjC++"
+argument_list|)
+operator|==
+literal|0
+condition|)
+block|{
+if|if
+condition|(
+name|library
+operator|==
+literal|0
 condition|)
 name|library
 operator|=
@@ -1057,24 +1106,6 @@ argument_list|,
 name|quote
 argument_list|)
 expr_stmt|;
-comment|/* If we know we don't have to do anything, bail now.  */
-if|if
-condition|(
-operator|!
-name|added
-operator|&&
-name|library
-operator|<=
-literal|0
-condition|)
-block|{
-name|free
-argument_list|(
-name|args
-argument_list|)
-expr_stmt|;
-return|return;
-block|}
 comment|/* There's no point adding -shared-libgcc if we don't have a shared      libgcc.  */
 ifndef|#
 directive|ifndef
