@@ -2355,13 +2355,6 @@ decl_stmt|,
 name|tmp
 decl_stmt|;
 name|tree
-name|addr_type
-init|=
-name|build_pointer_type
-argument_list|(
-name|type
-argument_list|)
-decl_stmt|,
 name|atype
 decl_stmt|;
 name|struct
@@ -2486,10 +2479,6 @@ condition|)
 block|{
 name|tmp
 operator|=
-name|fold_convert
-argument_list|(
-name|addr_type
-argument_list|,
 name|build_addr
 argument_list|(
 name|parts
@@ -2497,6 +2486,13 @@ operator|.
 name|symbol
 argument_list|,
 name|current_function_decl
+argument_list|)
+expr_stmt|;
+name|gcc_assert
+argument_list|(
+name|is_gimple_val
+argument_list|(
+name|tmp
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -2508,12 +2504,32 @@ operator|.
 name|base
 condition|)
 block|{
+name|gcc_assert
+argument_list|(
+name|TREE_TYPE
+argument_list|(
+name|parts
+operator|.
+name|base
+argument_list|)
+operator|==
+name|sizetype
+argument_list|)
+expr_stmt|;
 if|if
 condition|(
 name|parts
 operator|.
 name|index
 condition|)
+block|{
+name|atype
+operator|=
+name|TREE_TYPE
+argument_list|(
+name|tmp
+argument_list|)
+expr_stmt|;
 name|parts
 operator|.
 name|base
@@ -2526,11 +2542,11 @@ name|fold_build2
 argument_list|(
 name|PLUS_EXPR
 argument_list|,
-name|addr_type
+name|atype
 argument_list|,
 name|fold_convert
 argument_list|(
-name|addr_type
+name|atype
 argument_list|,
 name|parts
 operator|.
@@ -2545,6 +2561,7 @@ argument_list|,
 name|NULL_TREE
 argument_list|)
 expr_stmt|;
+block|}
 else|else
 block|{
 name|parts
